--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -245,7 +245,11 @@ corepack_enable: false
 #    container_port: 3000
 #    http_port: 9998
 #    https_port: 9999
-
+web_extra_exposed_ports:
+  - name: "eslintconf inspector"
+    container_port: 7777
+    https_port: 7776
+    http_port: 7777
 #web_extra_daemons:
 #- name: "http-1"
 #  command: "/var/www/html/node_modules/.bin/http-server -p 3000"
