--- a/config/local/core.extension.yml
+++ b/config/local/core.extension.yml
@@ -9,6 +9,7 @@ module:
   block_content: 0
   breakpoint: 0
   ckeditor5: 0
+  codit_batch_operations: 0
   comment: 0
   config: 0
   config_split: 0
@@ -20,6 +21,7 @@ module:
   devel: 0
   dynamic_page_cache: 0
   editor: 0
+  editoria11y: 0
   field: 0
   field_ui: 0
   file: 0
@@ -27,6 +29,7 @@ module:
   help: 0
   history: 0
   image: 0
+  jsonapi: 0
   link: 0
   menu_link_content: 0
   menu_ui: 0
@@ -36,18 +39,28 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  project_browser: 0
+  rest: 0
+  restui: 0
   search: 0
+  seckit: 0
+  serialization: 0
   shortcut: 0
+  simple_sitemap: 0
+  sitemap: 0
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   tracer: 0
+  twig_tweak: 0
   update: 0
   user: 0
   views_ui: 0
   webprofiler: 0
   workspaces: 0
+  pathauto: 1
   views: 10
   standard: 1000
 theme:
