--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "devDependencies": {
-    "eslint": "^9.10.0",
-    "stylelint": "^16.9.0"
+    "@eslint/config-inspector": "^0.5.6",
+    "@stylistic/eslint-plugin": "^2.11.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-jsdoc": "^50.6.0",
+    "stylelint": "^16.11.0"
+  },
+  "scripts": {
+    "config-inspector": "config-inspector --host=0.0.0.0",
+    "eslint": "eslint"
   }
 }
